# PyTomography

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  classes.py  data_sheet.xlsx  lead_attenuation_values.xlsx  mlem.ipynb  pyproject.toml  setup.cfg  sigma_.ipynb  testing.ipynb
.github/workflows/: publish-to-test-pypi.yml  static.yml
data/: HU_to_mu.csv
docs/source/: conf.py  developers_guide.md  external_data.rst  gallery.rst  index.md  index.rst  install.rst  intro_page.md  usage.md
docs/source/_static/: code_toggle.js
docs/source/autoapi/: index.rst
docs/source/data_tables/: collimator_data.rst
docs/source/notebooks/: CardiacReorientation.ipynb  advertisement.ipynb  conventions.ipynb  dt1.ipynb  dt5.ipynb  dt6.ipynb  p_simind_multiorgan.py  p_subsample_data.py  run_all_notebooks.py  script_to_generate_eta_for_petsird.py  t_2DPET.ipynb  t_BSREM.ipynb  t_CT_GEN3.ipynb  t_CT_microct.ipynb  t_CardiacReorientation.ipynb  t_GE_HDF5.ipynb  t_KEM.ipynb  t_OSL.ipynb  t_PETGATE.ipynb  t_PETGATE_DIP.ipynb  t_PETGATE_LM.ipynb  t_PETGATE_SINO.ipynb  t_PETGATE_scat_lm copy.ipynb  t_PETGATE_scat_lm.ipynb  t_PETGATE_scat_lmTOF.ipynb  t_PETGATE_scat_sino.ipynb  t_PETGATE_scat_sinoTOF.ipynb  t_PETSIRD.ipynb  t_ac225_dicom_recon.ipynb  t_ac225_simind_recon.ipynb  t_algorithms.ipynb  t_dicom_algorithms.ipynb  t_dicomdata.ipynb  t_dicommultibed.ipynb  t_dualpeak.ipynb  t_examplesystemmatrix.ipynb  t_fbp.ipynb  t_plotting.ipynb  t_quantitative.ipynb  t_siminddata.ipynb  (+8 more)
docs/source/usage/: usage.rst  usage_ct.rst  usage_dev.rst  usage_pet.rst  usage_spect.rst
src/pytomography/: __init__.py  classes.py
src/pytomography/algorithms/: __init__.py  dip_recon.py  fbp.py  osem.py  preconditioned_gradient_ascent.py  statistical_iterative.py
src/pytomography/callbacks/: __init__.py  callback.py  data_saving.py  likelihood.py  liklihood.py
src/pytomography/corrections/: __init__.py  correction.py  ct_correction.py  psf_correction.py
src/pytomography/data/: README.md  Readme.md  collim.col  ct_table.csv  data_sheet.csv  lead_attenuation_values.csv  pet_colors.txt  pet_scanner_info.txt  simind.smc
src/pytomography/io/: __init__.py  dicom.py  io_utils.py  simind.py
src/pytomography/likelihoods/: __init__.py  likelihood.py  mse_objective.py  poisson_log_likelihood.py
src/pytomography/mappings/: __init__.py  mapping.py
src/pytomography/metadata/: __init__.py  metadata.py
src/pytomography/priors/: __init__.py  gibbs.py  nearest_neighbour.py  prior.py  relative_difference.py  smoothness.py
src/pytomography/projections/: __init__.py  back_projection.py  forward_projection.py  projection.py  system_matrix.py
src/pytomography/projectors/: __init__.py  system_matrix.py
tests/: test_pytomo.py
(+194 files in other folders)
