[metadata]
name = pytomography
version = 0.2
author = Luke Polson
author_email = lukepolson@outlook.com
description = A Python package for performing tomography
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qurit/PyTomography
project_urls =
    Bug Tracker = https://github.com/qurit/PyTomography/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src